--- a/404.html
+++ b/404.html
@@ -68,10 +68,9 @@ body {
 </div></header><main>
 <!-- MAIN -->
 <div class="grid-container">
-
-<h1>404</h1>
-<h2>Page Not Found </h2>
-<h2><b>¯\_(ツ)_/¯</b></h2>
+<article class="error-page content flow">
+<h1>404 Page Not Found</h1>
+<h2>¯\_(ツ)_/¯</h2>
 <p>Die Seite ist nicht verfügbar...<br>
 ...oder in einem anderen Verzeichnis</p>
 <div class="search-container">
@@ -82,8 +81,9 @@ body {
 </div><br>
 <p>Hast du Fragen zu dieser Website?<br>
 Schreibe eine Email an:</p>
-<h2>webmaster&#64;jumi.biz</h2>
-
+<!-- EMAIL -->
+<span id="contact-email">contact&#64;jumi.biz</span>
+</article>
 </div></main>
 
 <footer><div class="footer-container">
@@ -94,8 +94,7 @@ Schreibe eine Email an:</p>
 <!-- INSTAGRAM -->
 <a id="instagram-link" href="https://www.instagram.com/jumicontent" target="_blank">
 <img src="assets/img/ico/instagram.ico" alt="Instagram/jumicontent"></a></div>
-<!-- EMAIL -->
-<span id="contact-email">contact&#64;jumi.biz</span>
+
 <div class="rightside-site-features">
 <!-- EXPORT PDF -->
 <a id="export-icon" href="#">
