--- a/Content.htm
+++ b/Content.htm
@@ -7,7 +7,7 @@
 <meta name="keywords" content="linux,windows,cybersecurity,hacking,coding,shell,tools,network,basics">
 <meta name="author" content="Jumi">
 <!-- FAVICON --><link rel="icon" href="assets/img/ico/jumi.ico">
-<!-- TITLE --><title>Content</title>
+<!-- TITLE --><title>Options</title>
 <!-- CSS -->
 <link rel="stylesheet" type="text/css" href="assets/css/animations.css">
 <link rel="stylesheet" type="text/css" href="assets/css/style.css">
@@ -121,7 +121,7 @@ body {
         aria-expanded="false">
   <span class="hidden-menu">Menu</span>
   <div class="menu-icon" aria-hidden="true"></div>
-</button><div class="header-text"><span id="banner">(&lt;&gt;..&lt;&gt;)</span>
+</button><div class="header-text"><span id="spook">ଘ(੭*ˊᵕˋ)੭*ˋhello_ɪɴᴛᴇʀɴᴇᴛ</span>
 <!-- MENU -->
 <ul data-state="closed" class="menu-list">
 <li><a href="https://www.jumi.biz"><i class="list-icon">
@@ -134,190 +134,189 @@ body {
 <!-- MAIN -->
 <div class="grid-container">
 <article id="area-1" class="content flow">
+<section>
 <h1>Informationssicherheit </h1>
-  <div class="inside-content">
-    <div class="in-inside">
+<aside>
       <ul>
-        <h3>Standards </h3>
+        <caption><h3>Standards </caption></h3>
         <li><b><a href="pages/Schutzziele.htm">#Ziele und Sicherheiten </a></b></li>
         <li><b><a href="pages/ISO-2700x.htm">#ISO/IEC 2700x-Familie </a></b></li>
         <li><b><a href="pages/BSI-200-1.htm">#BSI-Standard 200-1 </a></b></li>
-        <h3>IT-Grundschutz </h3>
+        <caption><h3>IT-Grundschutz </caption></h3>
         <li><b><a href="pages/Elementare_Gefährdungen.htm">#Elementare Gefährdungen </a></b></li>
         <li><b><a href="pages/Prozess_Bausteine.htm">#Prozess Bausteine </a></b></li>
         <li><b><a href="pages/System_Bausteine.htm">#System Bausteine </a></b></li>
-        <h3>Datensicherheit </h3>
+        <caption><h3>Datensicherheit </caption></h3>
         <li><b><a href="pages/Datenschutz.htm">#Datenschutz </a></b></li>
         <li><b><a href="pages/organisatorische_Maßnahmen.htm">#organisatorische Maßnahmen </a></b></li>
         <li><b><a href="pages/technisch_Maßnahmen.htm">#technisch Maßnahmen </a></b></li>
       </ul>
-    </div>
-    <div class="in-inside">
+</aside>
+<aside>
       <ul>
-        <h3>BSI-Kritis-Gesetze </h3>
+        <caption><h3>BSI-Kritis-Gesetze </caption></h3>
         <li><b><a href="pages/Kritische_Infrastrukturen.htm">#Kritische Infrastrukturen </a></b></li>
         <li><b><a href="pages/Kritische_Infrastrukturen.htm">#Standards und Anwendungen </a></b></li>
         <li><b><a href="pages/Kritische_Infrastrukturen.htm">#Angriffspunkte </a></b></li>
-        <h3>### </h3>
+        <caption><h3>### </caption></h3>
         <li><b><a href="pages/pages/Kritische_Infrastrukturen.htm">###</a></b></li>
         <li><b><a href="pages/pages/Kritische_Infrastrukturen.htm">###</a></b></li>
         <li><b><a href="pages/pages/Kritische_Infrastrukturen.htm">###</a></b></li>
-        <h3>Zusammenfassung </h3>
+        <caption><h3>Zusammenfassung </caption></h3>
         <li><b><a href="pages/IT-Sicherheit.htm">IT-Sicherheit </a></b></li>
         <li><b><a href="pages/Kritische_Infrastrukturen.htm">Kritische Infrastrukturen </a></b></li>
         <li><b><a href="Content.htm">###</a></b></li>
       </ul>
-    </div>
-  </div>
+</aside>
+</section>
 </article>
 <article id="area-2" class="content flow">
+<section>
 <h1>IT-Systeme </h1>
-  <div class="inside-content">
-    <div class="in-inside">
+<aside>
       <ul>
-        <h3>### </h3>
+        <caption><h3>### </caption></h3>
         <li><b><a href="pages/###">###</a></b></li>
         <li><b><a href="pages/###">###</a></b></li>
         <li><b><a href="pages/###">###</a></b></li>
-        <h3>### </h3>
+        <caption><h3>### </caption></h3>
         <li><b><a href="pages/###">###</a></b></li>
         <li><b><a href="pages/###">###</a></b></li>
         <li><b><a href="pages/###">###</a></b></li>
-        <h3>### </h3>
+        <caption><h3>### </caption></h3>
         <li><b><a href="pages/###">###</a></b></li>
         <li><b><a href="pages/###">###</a></b></li>
         <li><b><a href="pages/###">###</a></b></li>
       </ul>
-    </div>
-    <div style="visibility:hidden;" class="in-inside">
+</aside>
+<aside>
       <ul>
-        <h3>### </h3>
+        <caption><h3>### </caption></h3>
         <li><b><a href="pages/###">###</a></b></li>
         <li><b><a href="pages/###">###</a></b></li>
         <li><b><a href="pages/###">###</a></b></li>
-        <h3>### </h3>
+        <caption><h3>### </caption></h3>
         <li><b><a href="pages/###">###</a></b></li>
         <li><b><a href="pages/###">###</a></b></li>
         <li><b><a href="pages/###">###</a></b></li>
-        <h3>### </h3>
+        <caption><h3>### </caption></h3>
         <li><b><a href="pages/###">###</a></b></li>
         <li><b><a href="pages/###">###</a></b></li>
         <li><b><a href="pages/###">###</a></b></li>
       </ul>
-    </div>
-  </div>
+</aside>
+</section>
 </article>
 <article id="area-3" class="content flow">
-<h1>Pentesting </h1>
-  <div class="inside-content">
-    <div class="in-inside">
+<section>
+<h1>IT-Systeme </h1>
+<aside>
       <ul>
-        <h3>Informationgathering </h3>
-        <li><b><a href="pages/###">#Antivirusprogramme</a></b></li>
-        <li><b><a href="pages/###">###</a></b></li>
-        <li><b><a href="pages/###">###</a></b></li>
-        <h3>Methoden </h3>
+        <caption><h3>### </caption></h3>
         <li><b><a href="pages/###">###</a></b></li>
         <li><b><a href="pages/###">###</a></b></li>
         <li><b><a href="pages/###">###</a></b></li>
-        <h3>Tools </h3>
+        <caption><h3>### </caption></h3>
+        <li><b><a href="pages/###">###</a></b></li>
+        <li><b><a href="pages/###">###</a></b></li>
+        <li><b><a href="pages/###">###</a></b></li>
+        <caption><h3>### </caption></h3>
         <li><b><a href="pages/###">###</a></b></li>
         <li><b><a href="pages/###">###</a></b></li>
         <li><b><a href="pages/###">###</a></b></li>
       </ul>
-    </div>
-    <div style="visibility:hidden;" class="in-inside">
+</aside>
+<aside>
       <ul>
-        <h3>### </h3>
+        <caption><h3>### </caption></h3>
         <li><b><a href="pages/###">###</a></b></li>
         <li><b><a href="pages/###">###</a></b></li>
         <li><b><a href="pages/###">###</a></b></li>
-        <h3>### </h3>
+        <caption><h3>### </caption></h3>
         <li><b><a href="pages/###">###</a></b></li>
         <li><b><a href="pages/###">###</a></b></li>
         <li><b><a href="pages/###">###</a></b></li>
-        <h3>### </h3>
+        <caption><h3>### </caption></h3>
         <li><b><a href="pages/###">###</a></b></li>
         <li><b><a href="pages/###">###</a></b></li>
         <li><b><a href="pages/###">###</a></b></li>
       </ul>
-    </div>
-  </div>
+</aside>
+</section>
 </article>
 <article id="area-4" class="content flow">
-<h1>Projektmanagement </h1>
-  <div class="inside-content">
-    <div class="in-inside">
+<section>
+<h1>IT-Systeme </h1>
+<aside>
       <ul>
-        <h3>Initierung und Planung </h3>
-        <li><b><a href="pages/Projektmanagement.htm">#Definierung </a></b></li>
-        <li><b><a href="pages/Projektmanagement.htm">#Planung </a></b></li>
-        <li><b><a href="pages/Projektmanagement.htm">#Aufgaben und Pflichten </a></b></li>
-        <h3>Methoden und Anwendung </h3>
-        <li><b><a href="pages/Projektmanagement.htm"></a></b></li>
-        <li><b><a href="pages/Projektmanagement.htm">###</a></b></li>
-        <li><b><a href="pages/Projektmanagement.htm">###</a></b></li>
-        <h3>Wirtschaftlichkeit</h3>
-        <li><b><a href="pages/Wirtschaftlichkeit.htm">#Bedarfsanalyse </a></b></li>
-        <li><b><a href="pages/Wirtschaftlichkeit.htm">#Nutzwertanalyse </a></b></li>
-        <li><b><a href="pages/Wirtschaftlichkeit.htm">#Angebotsvergleich </a></b></li>
+        <caption><h3>### </caption></h3>
+        <li><b><a href="pages/###">###</a></b></li>
+        <li><b><a href="pages/###">###</a></b></li>
+        <li><b><a href="pages/###">###</a></b></li>
+        <caption><h3>### </caption></h3>
+        <li><b><a href="pages/###">###</a></b></li>
+        <li><b><a href="pages/###">###</a></b></li>
+        <li><b><a href="pages/###">###</a></b></li>
+        <caption><h3>### </caption></h3>
+        <li><b><a href="pages/###">###</a></b></li>
+        <li><b><a href="pages/###">###</a></b></li>
+        <li><b><a href="pages/###">###</a></b></li>
       </ul>
-    </div>
-    <div class="in-inside">
+</aside>
+<aside>
       <ul>
-        <h3>Qualitätssicherung </h3>
-        <li><b><a href="pages/Qualitaetssicherung.htm">#Grundsätze </a></b></li>
-        <li><b><a href="pages/Qualitaetssicherung.htm">#Anforderungen </a></b></li>
-        <li><b><a href="pages/Qualitaetssicherung.htm">#Management </a></b></li>
-        <h3>Marketing </h3>
-        <li><b><a href="pages/Marketing.htm">#Fachbegriffe </a></b></li>
-        <li><b><a href="pages/Marketing.htm">#Grundfunktionen </a></b></li>
-        <li><b><a href="pages/Marketing.htm">#Produktlebebnszyklen</a></b></li>
-        <h3>Zusammenfassung </h3>
-        <li><b><a href="pages/Projektmanagement.htm">Projektmanagement </a></b></li>
-        <li><b><a href="pages/Qualitaetssicherung.htm">#Qualitätsicherung </a></b></li>
-        <li><b><a href="pages/Marketing.htm">#Marketing </a></b></li>
+        <caption><h3>### </caption></h3>
+        <li><b><a href="pages/###">###</a></b></li>
+        <li><b><a href="pages/###">###</a></b></li>
+        <li><b><a href="pages/###">###</a></b></li>
+        <caption><h3>### </caption></h3>
+        <li><b><a href="pages/###">###</a></b></li>
+        <li><b><a href="pages/###">###</a></b></li>
+        <li><b><a href="pages/###">###</a></b></li>
+        <caption><h3>### </caption></h3>
+        <li><b><a href="pages/###">###</a></b></li>
+        <li><b><a href="pages/###">###</a></b></li>
+        <li><b><a href="pages/###">###</a></b></li>
       </ul>
-    </div>
-  </div>
-
+</aside>
+</section>
 </article>
 <article id="area-5" class="content flow">
-<h1>### </h1>
-  <div class="inside-content">
-    <div class="in-inside">
+<section>
+<h1>IT-Systeme </h1>
+<aside>
       <ul>
-        <h3>### </h3>
+        <caption><h3>### </caption></h3>
         <li><b><a href="pages/###">###</a></b></li>
         <li><b><a href="pages/###">###</a></b></li>
         <li><b><a href="pages/###">###</a></b></li>
-        <h3>### </h3>
+        <caption><h3>### </caption></h3>
         <li><b><a href="pages/###">###</a></b></li>
         <li><b><a href="pages/###">###</a></b></li>
         <li><b><a href="pages/###">###</a></b></li>
-        <h3>### </h3>
+        <caption><h3>### </caption></h3>
         <li><b><a href="pages/###">###</a></b></li>
         <li><b><a href="pages/###">###</a></b></li>
         <li><b><a href="pages/###">###</a></b></li>
       </ul>
-    </div>
-    <div style="visibility:hidden;" class="in-inside">
+</aside>
+<aside>
       <ul>
-        <h3>### </h3>
+        <caption><h3>### </caption></h3>
         <li><b><a href="pages/###">###</a></b></li>
         <li><b><a href="pages/###">###</a></b></li>
         <li><b><a href="pages/###">###</a></b></li>
-        <h3>### </h3>
+        <caption><h3>### </caption></h3>
         <li><b><a href="pages/###">###</a></b></li>
         <li><b><a href="pages/###">###</a></b></li>
         <li><b><a href="pages/###">###</a></b></li>
-        <h3>### </h3>
+        <caption><h3>### </caption></h3>
         <li><b><a href="pages/###">###</a></b></li>
         <li><b><a href="pages/###">###</a></b></li>
         <li><b><a href="pages/###">###</a></b></li>
       </ul>
-    </div>
-  </div>
+</aside>
+</section>
 </article></div></main>
 
 <!-- ### Debugger: Auto-Refresh Page (-option)
