--- a/mjsecurity/index.html
+++ b/mjsecurity/index.html
@@ -148,11 +148,12 @@ body {
 <b class="o">Exobiologie.</b>
 Text&nbsp;minimalisiert, fragmentiert und visuell ergonomisiert.</p></section>
 <Section id="beschreibung">
-<h3>na und?</h3>
+<h3>Kinderleichtes Lesen</h3>
 Gewöhnlicher Text hat <b>~25%</b> relevanten Kerninhalt,
 davon verbleibt nach einem Tag vermutlich ~50%,
 nach zwei Tagen <b>~30%</b> im Gedächtnis. Ergibt <b>~7,5%</b> Text.</section>
 <section class="bsp-txt">
+<h3>Text-Beispiele</h3>
 <b>Beispiel A</b><aside>Zwanzig Zwerge machen Handstand,
 zehn&nbsp;im&nbsp;Wandschrank, zehn am Sandstrand.</aside>
 <b>Beispiel B</b><aside>Zwergenhandstände,Ort: 10,Schrank&nbsp;10,Strand</aside>
@@ -290,8 +291,8 @@ zehn&nbsp;im&nbsp;Wandschrank, zehn am Sandstrand.</aside>
 <br><span class="quiz-answers">A keyboard</span>
 </details>
 <details class="flow">
-<summary>Longest Domain?</summary>
-<br><span class="quiz-answers">smiles.com has a mile beween s</span>
+<summary>Longest Website Domain Name ?</summary>
+<br><span class="quiz-answers">smiles.com has a "mile" between the s's</span>
 </details>
 <details class="flow">
 <summary>Nikola&nbsp;Tesla's Apartment Number in the New York Hotel ?</summary>
@@ -459,8 +460,8 @@ zehn&nbsp;im&nbsp;Wandschrank, zehn am Sandstrand.</aside>
 <br><span class="quiz-answers">A keyboard</span>
 </details>
 <details class="flow">
-<summary>Longest Domain?</summary>
-<br><span class="quiz-answers">smiles.com has a mile beween s</span>
+<summary>Wieso nimmt Windows keine Drogen ?</summary>
+<br><span class="quiz-answers">Damit es nicht abstürzt...</span>
 </details>
 <details class="flow">
 <summary>Nikola&nbsp;Tesla's Apartment Number in the New York Hotel ?</summary>
