--- a/mjsecurity/Links.htm
+++ b/mjsecurity/Links.htm
@@ -7,7 +7,7 @@
 <meta name="keywords" content="linux,windows,cybersecurity,hacking,coding,shell,tools,network,basics">
 <meta name="author" content="Jumi">
 <!-- FAVICON --><link rel="icon" href="assets/img/ico/jumi.ico">
-<!-- TITLE --><title>jumi.biz</title>
+<!-- TITLE --><title>Links</title>
 <!-- CSS -->
 <link rel="stylesheet" type="text/css" href="assets/css/animations.css">
 <link rel="stylesheet" type="text/css" href="assets/css/style.css">
@@ -121,17 +121,91 @@ body {
         aria-expanded="false">
   <span class="hidden-menu">Menu</span>
   <div class="menu-icon" aria-hidden="true"></div>
-</button><div class="header-text"><span id="spook">ଘ(੭*ˊᵕˋ)੭*ˋmenu-></span>
+</button><div class="header-text"><span id="spooky">(&lt;&gt;..&lt;&gt;)</span>
 <!-- MENU -->
 <ul data-state="closed" class="menu-list">
-<li><a href="Content.htm"><i class="list-icon">
-<img src="assets/img/ico/menu-content.ico" alt="Content"></i>options</a></li>
+<li><a href="https://www.jumi.biz"><i class="list-icon">
+<img src="assets/img/ico/jumi.ico" alt="Home"></i>start</a></li>
 <li><a href="Links.htm"><i class="list-icon">
 <img src="assets/img/ico/menu-links.ico" alt="Links"></i>links</a></li>
 <li><a href="Cheats.htm"><i class="list-icon">
 <img src="assets/img/ico/menu-cheats.ico" alt="Cheats"></i>cheats</a></li>
 </ul></nav></div></header><main>
+
 <!-- MAIN -->
+<div class="grid-container">
+<article class="content flow">
+<section>
+<h4>Education</h4>
+<ul>
+<li><a href="https://www.theodinproject.com" target="_blank">TheOdinProject.com</a></li>
+<li><a href="https://www.freecodecamp.org" target="_blank">FreeCodeCamp.org</a></li>
+<li><a href="https://www.tryhackme.com" target="_blank">TryHackMe.com</a></li>
+<li><a href="https://www.media.ccc.de" target="_blank">media.ccc.de</a></li>
+</ul>
+</section>
+</article>
+<article class="content flow">
+<section>
+<h4>Et cetera</h4>
+<ul>
+<li><a href="https://www.virustotal.com/" target="_blank">Virus Total</a></li>
+<li><a href="https://www.codepen.io/pen/" target="_blank">CodePen</a></li>
+<li><a href="https://www.code.sgo.to/typograms/#related" target="_blank">Typogramme</a></li>
+</ul>
+</section>
+</article>
+<article class="content flow">
+<section>
+<h4>Künstliche Intelligenz</h4>
+<ul>
+<li><a href="https://www.you.com/" target="_blank">You.com</a></li>
+</ul>
+</section>
+</article>
+<article class="content flow">
+<section>
+<h4>Musik</h4>
+<ul>
+<li><a href="https://www.youtube.com/c/cryochamberlabel" target="_blank">Cryo Chamber</a></li>
+<li><a href="https://www.youtube.com/@VaporMemory" target="_blank">Vapor Memory</a></li>
+<li><a href="https://www.the80sguy.org/sub" target="_blank">The '80s Guy</a></li>
+<li><a href="https://www.8bit.fm/" target="_blank">8bit.fm</a></li>
+<li><a href="https://www.youtube.com/c/LofiGirl" target="_blank">Lofi Girl</a></li>
+</ul>
+</section>
+</article>
+<article class="content flow">
+<section>
+<h4>Youtube</h4>
+<ul>
+<li><a href="https://www.youtube.com/c/Algorithmenverstehen" target="_blank">Florian Dalwigk</a></li>
+<li><a href="https://www.youtube.com/user/TheMorpheus407/playlists" target="_blank">The Morpheus Tutorials</a></li>
+<li><a href="https://www.youtube.com/user/SemperVideo/videos" target="_blank">Semper Video</a></li>
+<li><a href="https://www.youtube.com/c/DistroTube" target="_blank">DistroTube</a></li>
+<li><a href="https://www.youtube.com/c/DavidBombal" target="_blank">David Bombal</a></li>
+<li><a href="https://www.youtube.com/user/EugeneKhutoryansky/videos" target="_blank">... 3D animated Education-Videos</a></li>
+<li><a href="https://www.youtube.com/c/BranchEducation/videos" target="_blank">Branch Education</a></li>
+<li><a href="https://www.youtube.com/c/DisruptReality" target="_blank">Disrupt</a></li>
+<li><a href="https://www.youtube.com/c/EFLinuxMadeSimple" target="_blank">EF Linux Made Simple</a></li>
+<li><a href="https://www.youtube.com/c/PowerCertAnimatedVideos" target="_blank">PowerCert Animated Videos</a></li>
+<li><a href="https://www.youtube.com/c/Fireshipx" target="_blank">Fireship</a></li>
+<li><a href="https://www.youtube.com/c/eHaJo" target="_blank">eHaJo</a></li>
+<li><a href="https://www.youtube.com/c/computerclubzwei" target="_blank">Computer Club 2</a></li>
+<li><a href="https://www.youtube.com/c/ChrisTitusTech" target="_blank">Chris Titus</a></li>
+<li><a href="https://www.youtube.com/c/LearnLinuxtv" target="_blank">Learn Linux TV</a></li>
+<li><a href="https://www.youtube.com/c/ct3003" target="_blank">ct3003</a></li>
+<li><a href="https://www.youtube.com/@KevinPowell" target="_blank">Kevin Powell</a></li>
+<li><a href="https://www.youtube.com/c/TheHatedOne" target="_blank">The Hated One</a></li>
+<li><a href="https://www.youtube.com/c/LiveOverflow" target="_blank">Live Overflow</a></li>
+<li><a href="https://www.youtube.com/c/hak5" target="_blank">hak5</a></li>
+<li><a href="https://www.youtube.com/c/ippsec" target="_blank">IppSec</a></li>
+<li><a href="https://www.youtube.com/@MentalOutlaw" target="_blank">Mental Outlaw</a></li>
+<li><a href="https://www.youtube.com/@PenAce" target="_blank">Pen Ace</a></li></ul>
+
+</section>
+</article>
+</div><br>
 <div class="grid-container">
 <article id="area-1" class="content flow">
 <!-- HELLO WORLD -->
@@ -139,20 +213,21 @@ body {
 <section>
 <h4>wtf is <span class="jumi-font">jumi.biz</span> ?</h4>
 <p>Kompakte Inhalte über
-<b class="r">Linux</b> 
-<b class="g">Windows</b> 
-<b class="b">Infosec</b> 
-<b class="y">Coding</b> 
-<b class="c">Shell</b> 
+<b class="r">Linux</b>
+<b class="g">Windows</b>
+<b class="b">Infosec</b>
+<b class="y">Coding</b>
+<b class="c">Shell</b>
 <b class="m">Tools</b> und
 <b class="o">Exobiologie.</b>
 Text&nbsp;minimalisiert, fragmentiert und visuell ergonomisiert.</p></section>
 <Section id="beschreibung">
-<h3>na und?</h3>
+<h3>Kinderleichtes Lesen</h3>
 Gewöhnlicher Text hat <b>~25%</b> relevanten Kerninhalt,
 davon verbleibt nach einem Tag vermutlich ~50%,
 nach zwei Tagen <b>~30%</b> im Gedächtnis. Ergibt <b>~7,5%</b> Text.</section>
 <section class="bsp-txt">
+<h3>Text-Beispiele</h3>
 <b>Beispiel A</b><aside>Zwanzig Zwerge machen Handstand,
 zehn&nbsp;im&nbsp;Wandschrank, zehn am Sandstrand.</aside>
 <b>Beispiel B</b><aside>Zwergenhandstände,Ort: 10,Schrank&nbsp;10,Strand</aside>
@@ -202,7 +277,7 @@ zehn&nbsp;im&nbsp;Wandschrank, zehn am Sandstrand.</aside>
     <li>[24-01] Themes-Feature</li></ul></aside>
 </section>
 <section class="flex">
-<table id="tasten-steuerung">
+<table id="tabelle-2">
 <caption>Tasten-Steuerung</caption>
     <thead>
         <tr>
@@ -290,8 +365,8 @@ zehn&nbsp;im&nbsp;Wandschrank, zehn am Sandstrand.</aside>
 <br><span class="quiz-answers">A keyboard</span>
 </details>
 <details class="flow">
-<summary>Longest Domain?</summary>
-<br><span class="quiz-answers">smiles.com has a mile beween s</span>
+<summary>Wieso nimmt Windows keine Drogen ?</summary>
+<br><span class="quiz-answers">Damit es nicht abstürzt...</span>
 </details>
 <details class="flow">
 <summary>Nikola&nbsp;Tesla's Apartment Number in the New York Hotel ?</summary>
@@ -459,8 +534,8 @@ zehn&nbsp;im&nbsp;Wandschrank, zehn am Sandstrand.</aside>
 <br><span class="quiz-answers">A keyboard</span>
 </details>
 <details class="flow">
-<summary>Longest Domain?</summary>
-<br><span class="quiz-answers">smiles.com has a mile beween s</span>
+<summary>Wieso nimmt Windows keine Drogen ?</summary>
+<br><span class="quiz-answers">Damit es nicht abstürzt...</span>
 </details>
 <details class="flow">
 <summary>Nikola&nbsp;Tesla's Apartment Number in the New York Hotel ?</summary>
