--- a/index.html
+++ b/index.html
@@ -10,103 +10,8 @@
 <!-- TITLE --><title>jumi.biz</title>
 <!-- CSS -->
 <link rel="stylesheet" type="text/css" href="assets/css/animations.css">
-<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 <link rel="stylesheet" type="text/css" href="assets/css/layout.css">
-<style>
-:root { /* Font and Colors */
-  --basic-glow-frame-1: rgba(202,228,225,0.92);
-  --basic-glow-frame-2: rgba(202,228,225,0.34);
-  --basic-glowbox-frame-1: rgba(202,228,225,0.98);
-  --basic-glowbox-frame-2: rgba(202,228,225,0.42);
-  --glow-red: #FF0000;
-  --glow-indigo: #4B0082;
-  --glow-blue: #0000FF;
-  --glow-yellow: #FFFF00;
-  --glow-green: #00FF00;
-  --glow-magenta: #FF00FF;
-  --glow-orange: #FFA500;
-  --glow-cyan: #00f0f0;
-  --glow-lightgreen: #8dd88e;
-  --glow-pink: #ffbfea;
-  --glow-lightyellow: #ebebd3;
-  --base-font-size: 16px;
-  --high-ground: rgba(0,0,0,0.1);
-  --laser-blue: #00f0f0;
-  --matrix-green: #8dd88e;
-  --neon-pink: #ffbfea;
-  --pipi-white: #ebebd3;
-  --shadow-grey: #131313;
-  --space-motion:
-    rgba(0, 240, 240, 0.4) 0px 2px 4px,
-    rgba(0, 240, 240, 0.3) 0px 7px 13px -3px,
-    rgba(0, 240, 240, 0.2) 0px -3px 0px inset;
-  --ants-cry:
-    rgba(0, 0, 0, 0.1) 0px 2px 4px,
-    rgba(0, 0, 0, 0.4) 0px -2px 0px inset;
-}
-@media screen and (min-width: 35em) {
-    .grid-container {grid-template-areas:
-        "one one"
-        "two three"
-        "five five"
-        "four four";
-    }
-}
-@media screen and (min-width: 38em) {
-    .grid-container {grid-template-areas:
-        "one one"
-        "two five"
-        "three five"
-        "four four";
-    }
-}
-@media screen and (min-width: 54em) {
-    .grid-container {grid-template-areas:
-        "one one two"
-        "five five five"
-        "three four four";
-    }
-}
-@media screen and (min-width: 75em) {
-    .grid-container {grid-template-areas:
-        "one one two five"
-        "three four four five";
-    }
-}
-@media screen and (max-width: 35em) {
-    #tasten-steuerung {
-    display:none;
-    }
-}
-@keyframes neon {
-     from {text-shadow:
-          0 0 6px rgba(202,228,225,0.92),
-          0 0 30px rgba(202,228,225,0.34),
-          0 0 12px rgba(30,132,242,0.52),
-          0 0 21px rgba(30,132,242,0.92),
-          0 0 34px rgba(30,132,242,0.78),
-          0 0 54px rgba(30,132,242,0.92);
-    } to {text-shadow:
-          0 0 6px rgba(202,228,225,0.98),
-          0 0 30px rgba(202,228,225,0.42),
-          0 0 12px rgba(30,132,242,0.58),
-          0 0 22px rgba(30,132,242,0.84),
-          0 0 38px rgba(30,132,242,0.88),
-          0 0 60px rgba(30,132,242,1);}}
-@keyframes neon-box {
-    from {box-shadow: 0 0 6px rgba(202, 228, 225, 0.92),0 0 24px rgba(202, 228, 225, 0.34), 0 0 9.6px rgba(30, 132, 242, 0.52), 0 0 16.8px rgba(30, 132, 242, 0.92), 0 0 27.2px rgba(30, 132, 242, 0.78), 0 0 43.2px rgba(30, 132, 242, 0.92);
-    }
-    to {box-shadow: 0 0 6px rgba(202, 228, 225, 0.98), 0 0 24px rgba(202, 228, 225, 0.42), 0 0 9.6px rgba(30, 132, 242, 0.58), 0 0 17.6px rgba(30, 132, 242, 0.84), 0 0 30.4px rgba(30, 132, 242, 0.88), 0 0 48px rgba(30, 132, 242, 1);}}
-html {background-color: var(--shadow-grey);}
-body {
-  font-size: var(--base-font-size);
-  height: 100%;/* Footer-Einfluss */
-  margin:0;padding:0;
-  position: relative;/* Footer-Einfluss */
-  text-rendering: optimizeSpeed;
-}
-*,*::before,*::after {box-sizing: border-box;}
-</style>
+<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 <!-- BODY -->
 <body id="ଘ(੭*ˊᵕˋ)੭*ˋhello_ɪɴᴛᴇʀɴᴇᴛ">
@@ -121,7 +26,7 @@ body {
         aria-expanded="false">
   <span class="hidden-menu">Menu</span>
   <div class="menu-icon" aria-hidden="true"></div>
-</button><div class="header-text"><span id="spook">ଘ(੭*ˊᵕˋ)੭*ˋmenu-></span>
+</button><div class="header-text"><span id="spook">ଘ(੭*ˊᵕˋ)੭*ˋsee more -></span>
 <!-- MENU -->
 <ul data-state="closed" class="menu-list">
 <li><a href="Content.htm"><i class="list-icon">
@@ -146,7 +51,7 @@ body {
 <b class="c">Shell</b> 
 <b class="m">Tools</b> und
 <b class="o">Exobiologie.</b>
-Text&nbsp;minimalisiert, fragmentiert und visuell ergonomisiert. ...btw sry i love glowing lights &#9786;</p></section>
+Text&nbsp;minimalisiert, fragmentiert und visuell ergonomisiert. <span class="">...btw sry i love glowing lights &#9786;</span></p></section>
 <Section id="beschreibung">
 <h3>na und?</h3>
 Gewöhnlicher Text hat <b>~25%</b> relevanten Kerninhalt,
@@ -262,8 +167,8 @@ zehn&nbsp;im&nbsp;Wandschrank, zehn am Sandstrand.</aside>
 </div>
 <br>
 <!-- PERSON -->
-    <section><p>Mich interessiert das&nbsp;Verborgene. Neugier&nbsp;will leben, will&nbsp;<b class="b">Wasser</b> zum Trinken, will&nbsp;<b class="y">Luft</b> zum&nbsp;Atmen. Bitte&nbsp;Ende, flüster das größte Geheimnis, das im&nbsp;Tausch, wieder verborgen zurückkehrt. Dessen Wahrheit im <b class="g">Rauch</b> des <b class="r">Feuers</b> versteckt, unfassbar wie <b class="o">Erde</b> im <b>Wind</b> lebt.</p></section>
-    <aside><q>Wer? Wer ist nur die Form als Konsequenz der Funktion des&nbsp;Was. Und&nbsp;was ich bin, das ist ein Mann mit Maske.</q><br><cite>- V wie Vendetta (2005)</cite></aside>
+    <section><p>Mich interessiert das&nbsp;Verborgene. Neugier&nbsp;will leben, will&nbsp;<b class="b">Wasser</b> zum Trinken, will&nbsp;<b class="y">Luft</b> zum&nbsp;Atmen. Bitte&nbsp;Ende, flüster das größte Geheimnis, das im&nbsp;Tausch, wieder verborgen zurückkehrt. Dessen Wahrheit im <b class="g">Rauch</b> des <b class="r">Feuers</b> versteckt, unfassbar wie <b class="o">Erde</b> im <b>Wind</b> lebt.</p>
+    <p class="zitiert">Wer? Wer ist nur die Form als Konsequenz der Funktion des&nbsp;Was. Und&nbsp;was ich bin, das ist ein Mann mit Maske.<br><cite>- V wie Vendetta (2005)</cite></p></section>
 </article>
 <article id="area-3" class="content flow">
 <!-- STUFF -->
